examples/negative/patterns/pattern_duplicate_binding.kai
# Issue #534 shape 1: a single pattern binds the same name twice.
# Per ML/Haskell-family convention this is a hard error — the
# second `x` would silently shadow the first with no observable
# equality check. The user almost certainly intended a guard.

type Pair = MkPair(Int, Int)

fn f(p: Pair) : Int = match p {
  MkPair(x, x) -> x
}

fn main() : Int = f(MkPair(1, 2))
